; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_api.c_xh_vm_gla2gpa.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_api.c_xh_vm_gla2gpa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_guest_paging = type { i32 }

@vm = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xh_vm_gla2gpa(i32 %0, %struct.vm_guest_paging* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.vm_guest_paging*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store %struct.vm_guest_paging* %1, %struct.vm_guest_paging** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @vcpu_freeze(i32 %14, i32 1)
  %16 = load i32, i32* @vm, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.vm_guest_paging*, %struct.vm_guest_paging** %8, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* %10, align 4
  %21 = load i32*, i32** %11, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = call i32 @vm_gla2gpa(i32 %16, i32 %17, %struct.vm_guest_paging* %18, i32 %19, i32 %20, i32* %21, i32* %22)
  store i32 %23, i32* %13, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @vcpu_freeze(i32 %24, i32 0)
  %26 = load i32, i32* %13, align 4
  ret i32 %26
}

declare dso_local i32 @vcpu_freeze(i32, i32) #1

declare dso_local i32 @vm_gla2gpa(i32, i32, %struct.vm_guest_paging*, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
